--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,9 @@ edition = "2021"
 [dependencies]
 tokio = { version = "1.27.0", features = ["full"] }
 anyhow = "1.0.69"
-axum = "0.6.16"
+axum = { version = "0.6.16", features = ["multipart"] }
 bytes = "1.4.0"
+dotenvy = "0.15.6"
 futures-util = "0.3.28"
 sea-orm = { version = "0.11.2", features = [
     "sqlx-mysql",
@@ -21,4 +22,4 @@ serde_json = "1.0.96"
 sha256 = "1.1.3"
 tracing = "0.1"
 tower-http = { version = "0.4.0", features = ["full"] }
-dotenvy = "0.15.6"
+rand = "0.8.5"
