--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 HOST=127.0.0.1
 PORT=9999
-DATABASE_URL="mysql://root:heruoqing@127.0.0.1/test"
+DATABASE_URL="mysql://root:heruoqing@127.0.0.1:3333/test"
+LFS_HOST="127.0.0.1:9999"
