--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,6 @@ sha256 = "1.1.3"
 tracing = "0.1"
 tower-http = { version = "0.4.0", features = ["full"] }
 rand = "0.8.5"
+time = { version = "0.3.21", features = ["serde", "serde-well-known", "serde-human-readable"] }
+time-macros = "0.2.9"
+chrono = "0.4.24"
